// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DrugDetailScreen — single scroll > LTR snapshot 1`] = `
<SafeAreaView
  edges={
    [
      "top",
    ]
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#f5f5f5",
      },
    ]
  }
>
  <View
    contentContainerStyle={
      {
        "gap": 12,
        "padding": 16,
        "paddingBottom": 32,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "gap": 12,
          },
          {
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        testID="drug-thumbnail"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "PublicSans-Bold",
                "fontSize": 24,
                "marginBottom": 2,
              },
              {
                "color": "#141c28",
              },
              false,
            ]
          }
        >
          amoxicillin
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "Manrope",
                "fontSize": 14,
              },
              {
                "color": "#4a5568",
                "textAlign": "left",
                "writingDirection": "ltr",
              },
            ]
          }
        >
          amoxicillin
           · J01CA04
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "gap": 12,
            },
            {
              "flexDirection": "row",
            },
          ]
        }
      >
        <Pressable
          accessibilityLabel="drug.addBookmark"
          accessibilityRole="button"
          hitSlop={8}
          onClick={[Function]}
          testID="bookmark-btn"
        >
          <View
            testID="icon-Heart"
          />
        </Pressable>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <View>
        Antibiotic
      </View>
    </View>
    <View
      testID="safety-zone"
    />
    <View
      style={
        {
          "gap": 0,
        }
      }
    >
      <View
        testID="section-summary"
      >
        <View>
          Summary
        </View>
      </View>
    </View>
  </View>
</SafeAreaView>
`;

exports[`DrugDetailScreen — single scroll > RTL snapshot (lang=ar) 1`] = `
<SafeAreaView
  edges={
    [
      "top",
    ]
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#f5f5f5",
      },
    ]
  }
>
  <View
    contentContainerStyle={
      {
        "gap": 12,
        "padding": 16,
        "paddingBottom": 32,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "gap": 12,
          },
          {
            "flexDirection": "row-reverse",
          },
        ]
      }
    >
      <View
        testID="drug-thumbnail"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "PublicSans-Bold",
                "fontSize": 24,
                "marginBottom": 2,
              },
              {
                "color": "#141c28",
              },
              {
                "fontFamily": "NotoKufiArabic",
                "textAlign": "right",
                "writingDirection": "rtl",
              },
            ]
          }
        >
          أموكسيسيلين
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "Manrope",
                "fontSize": 14,
              },
              {
                "color": "#4a5568",
                "textAlign": "right",
                "writingDirection": "ltr",
              },
            ]
          }
        >
          amoxicillin
           · J01CA04
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "gap": 12,
            },
            {
              "flexDirection": "row-reverse",
            },
          ]
        }
      >
        <Pressable
          accessibilityLabel="drug.addBookmark"
          accessibilityRole="button"
          hitSlop={8}
          onClick={[Function]}
          testID="bookmark-btn"
        >
          <View
            testID="icon-Heart"
          />
        </Pressable>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <View>
        Antibiotic
      </View>
    </View>
    <View
      testID="safety-zone"
    />
    <View
      style={
        {
          "gap": 0,
        }
      }
    >
      <View
        testID="section-summary"
      >
        <View>
          Summary
        </View>
      </View>
    </View>
  </View>
</SafeAreaView>
`;
